# lodge

./: .cornerstone  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  FUTURE.md  GEMINI.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
.agents/: AGENTS.archaeology.md  AGENTS.cli.md  AGENTS.server.md
.claude/: settings.json
.gemini/: settings.json
.github/workflows/: ci.yml
.swarm/: LEDGER.md  notify.sh
.telemetry/: __init__.py  client.py  cost_rates.py  decorators.py  otel.py  schema.py
alembic/: env.py
alembic/versions/: 0001_initial.py
cli/: report.py
dashboard/static/: index.html
docs/adr/: ADR-0001-initial-architecture.md  ADR-0001-lodge-architecture.md  ADR-0002-containerization-strategy.md  index.md
src/lodge/domain/: config.py  schemas.py
tests/: conftest.py  test_telemetry.py
tests/features/: auth.feature  finops.feature  health.feature  ingest.feature  mcp_catalog.feature  projects.feature  rbac.feature
tests/step_defs/: test_health.py  test_ingest.py
tools/: adr_gate.py  enforce_gitflow.py  enforce_semver.py  gitops_gate.py  install_hooks.sh  sync_agents.sh
tools/hardware/systems/: INDEX.md
tools/hardware/wireless/: INDEX.md
tools/software/discovery/: INDEX.md  api_mapper.py  call_tree.py  cluster_deps.py  code_indexer.py  decision_extractor.py  decompiler_manager.py  dedup_minhash.py  dll_unpacker.py  kedro_lineage_builder.py  language_detector.py  main.py  query_trace.py  reporter.py  sql_logic_parser.py  (+4 more)
(+31 files in other folders)
