[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lodge"
version = "0.1.0"
description = "A FastAPI + PostgreSQL service scaffolded by Cornerstone"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[project.scripts]
lodge = "cli.report:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-bdd>=7.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.8",
    "import-linter>=2.0",
    "pre-commit>=3.7",
]

[tool.importlinter]
root_package = "lodge"

[[tool.importlinter.contracts]]
name = "Hexagonal Architecture"
type = "layers"
layers = [
    "lodge.adapters",
    "lodge.ports",
    "lodge.domain",
]

[[tool.importlinter.contracts]]
name = "Adapter independence"
type = "independence"
modules = [
    "lodge.adapters.inbound",
    "lodge.adapters.outbound",
]

[[tool.importlinter.contracts]]
name = "Entrypoint isolation"
type = "forbidden"
source_modules = [
    "lodge.adapters",
    "lodge.ports",
    "lodge.domain",
]
forbidden_modules = [
    "lodge.main",
    "lodge.server",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*"]
